# speedmetrics

./: Cargo.toml  Dockerfile  LICENSE  README.md
.github/workflows/: image.yaml
src/: main.rs  models.rs  prometheus.rs  server.rs  speedtest.rs
