[package]
name = "speedmetrics"
version = "0.0.2"
authors = ["Nguyen Thai <shiroemon279@gmail.com>"]
edition = "2021"

[dependencies]
color-eyre = "0.6"
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
mac_address = { version = "1.1.4", features = ["serde"] }
prometheus-client = "0.18"

[profile.release]
strip = true
